alert timeout edit

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <link href="connect4.css" rel="stylesheet">
 </head>
 <body>
-
+<h1 id="heading"> Play Connect Four! </h1>
 <div id="game">
   <table id="board"></table>
 </div>
-
+<div id = "falling-animation"></div>
 <script src="connect4.js"></script>
 
 </body>
